# harness-app-template

./: .cursor.mcp.json.2142091.1780153865405905.0.bak  .cursor.mcp.json.2143308.1780153877552949.0.bak  .dependency-cruiser.cjs  .env.example  .gemini.mcp.json.2142091.1780153865428014.0.bak  .gemini.mcp.json.2143308.1780153877567571.0.bak  .gemini.mcp.json.2143719.1780153901581988.0.bak  .gitdiff.txt  .gitignore  .harness-provenance.json  AGENTS.md  APSS.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FRICTION.md  LICENSE  LP_COORDINATION.md  LP_FINDINGS--bravo.md  LP_FINDINGS.md  LP_RECOMMENDATION--bravo.md  LP_RECOMMENDATION.md  README.md  biome.jsonc  br_help.txt  cog.toml  config.toml  cursor.mcp.json  design_note.txt  gemini.mcp.json  harness.manifest.json  harness.schema.json  justfile  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  (+5 more)
.beads/: config.yaml  issues.jsonl  ubs-findings.jsonl
.claude/: .settings.local.json.2143719.1780153901521143.0.bak  settings.json  settings.local.example.json
.claude/hooks/: ubs-diff.sh
.claude/skills/: slp-source.json
.github/: CODEOWNERS
.github/scripts/: install-gitleaks.sh  install-sentrux.sh
.github/workflows/: pages.yml  test.yml  versioning.yml
.ntm/: rate_limits.json
.ntm/pids/: am-harness-app-template.pid  cm-harness-app-template.pid
docs/: README.md  executive-summary.md  harness-engineering-gap-report.md  slot-contracts.md  updating.md
docs/adr/: 0001-stack-manager.md  0005-observability-stack.md  0006-sensors.md  0007-agent-plugins.md  0009-secret-scanner.md  0010-doc-validator.md  0012-binary-distribution.md  0015-cha-sync-source-of-truth.md  ADR-0001-stack-manager.md  ADR-0005-observability-stack.md  ADR-0010-doc-validator.md  ADR-0013-coverage-enforcement.md  ADR-0014-strict-typing.md  ADR-0015-cha-sync-source-of-truth.md  AGENTS.md  README.md
docs/adrs/: ADR-0001-Bad.md  ADR-0001-demo.md  ADR-0001-good-title.md  ADR-0001-no-extension.md  ADR-0001-stack-manager.md  ADR-0002-dir.md  ADR-0002-inspector.md  ADR-0003-hooks.md  ADR-0003-no-frontmatter.md  ADR-0004-no-status.md  ADR-0004-telemetry-sdk.md  ADR-0006-sensors.md  ADR-0007-agent-plugins.md  ADR-0008-task-runner.md  ADR-0009-secret-scanner.md  ADR-0011-versioning.md  ADR-0012-binary-distribution.md  ADR-0012-config-manager.md  ADR-0013-coverage-enforcement.md  ADR-0014-strict-typing.md  ADR-0016-createapp-wrapper-design.md  ADR-0017-sensors-v03-apss-canonical.md  ADR-0018-apss-v1-1-0-augmentation.md  ADR-0018-quality-gate-slot-composition.md  ADR-0019-closed-loop-architectural-quality.md  ADR-0020-architectural-fitness-ratchet.md  ADR-0021-formatter-slot.md  ADR-0022-merge-gating.md  ADR-0023-dependency-audit.md  ADR-0024-dead-code-ratchet.md  ADR-0025-coverage-ratchet.md  ADR-0025-suite-duration-sensor-pf01.md  ADR-0026-profiling-slot.md  ADR-0027-config-manager.md  ADR-9999-missing.md  AGENTS.md  CLAUDE.md  README.md  _template.md
docs/coordination/: APSS-ADR-STANDARD.md  README.md  adr-template.md
docs/decisions/: README.md  cha-sync-source-of-truth.md  coverage-enforcement.md  createapp-wrapper-design.md  hooks.md  inspector.md  strict-typing.md  task-runner.md  telemetry-sdk.md  versioning.md
docs/development/: README.md  beads-viewer.md  br_create_help.txt  mocks.md
docs/evolution/: README.md  v0.4.x-evolution.md
docs/gap-analysis/: 00-consolidated.md  01-harness-engineering.md  02-decisions-adr.md  03-harness-implementation.md  04-learnings-examples.md  05-apss-conformance.md  README.md  dogfood-quote-api-friction-2026-06.md  lab-vs-template-2026-06-coverage.md  lab-vs-template-2026-06-lead.md  lab-vs-template-2026-06-observability.md  lab-vs-template-2026-06-principles.md  lab-vs-template-2026-06-sensors-versioning.md
docs/harness-engineering/: README.md  capability-checklist.md  key-passages.md  lab-five-principles.md  slot-architecture.md  (+1 more)
experiments/: EXP-01-fork-bootstrap.md  EXP-02-run-the-app.md  EXP-03-fast-feedback-loop.md  EXP-04-ui-feedback.md  EXP-05-backend-feedback.md  EXP-06-opentelemetry-access.md  EXP-07-ags-completeness.md  EXP-08-skills-discoverability.md  EXP-09-doc-gate-in-practice.md  EXP-10-fitness-gate.md  EXP-11-profiling-gap.md  EXP-12-end-to-end-task.md  EXPERIMENTS_ROADMAP.md  FRICTION.md  PROFILING-SLOT-DESIGN.md
harness/config-manager/: Cargo.toml
harness/config-manager/src/: check.rs  codegen.rs  env_file.rs  exec.rs  lib.rs  main.rs  schema.rs  shell.rs
harness/config-manager/src/resolver/: env.rs  mod.rs  op.rs
harness/config-manager/tests/: integration_test.rs
harness/doc-validator/: Cargo.toml  README.md  package.json
harness/doc-validator/src/: checker.rs  lib.rs  main.rs  scanner.rs  validators.rs
harness/doc-validator/tests/: integration_test.rs
harness/stack/rust-stub/: Cargo.toml
harness/stack/rust-stub/src/: lib.rs  main.rs
harness/versioning/: Cargo.toml  README.md  package.json
harness/versioning/src/: lib.rs  main.rs
harness/versioning/tests/: integration_test.rs
scripts/: agents-link.ts  agents-skills.ts  apss.mjs  boot.ts  bootstrap.ts  build.ts  cargo.ts  coverage.ts  dep-audit.ts  doc-validator.mjs  doctor.ts  fork-check.ts  harness-engineering-skills.ts  harness-review.ts  init.ts  inspector.ts  lint.ts  profiling.ts  protect-main.ts  qa.ts  sensors-coverage.ts  sensors.ts  slots.ts  stack.ts  test-coverage.ts  test.ts  typecheck.ts  update-slp.ts  update.ts  uv.ts  versioning.ts
ws_apps/example-python/: README.md  package.json  pyproject.toml
ws_apps/example-python/scripts/: with-uv.sh
ws_apps/example-python/src/example_python/: __init__.py  main.py  telemetry.py
ws_apps/example-python/tests/: test_main.py
ws_apps/example-python/tests/integration/: test_cli_integration.py
ws_apps/example-rust/: Cargo.toml  README.md  package.json
ws_apps/example-rust/src/: main.rs  telemetry.rs
ws_apps/example-rust/tests/: integration_test.rs
ws_packages/d_test-guard/: Cargo.toml  index.test.ts  index.ts  package.json  tsconfig.json  vitest.config.ts
ws_packages/d_test-guard/src/: lib.rs
(+270 files in other folders)
