[workspace]
resolver = "3"
members = [
  "ws_apps/example-rust",
]

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }

[workspace.metadata.coverage]
tool = "cargo-llvm-cov"
rust_surfaces = [
  "ws_apps/example-rust",
  "harness/doc-validator",
  "harness/versioning",
]
excluded_surfaces = [
  "harness/stack/rust-stub",
]
lines_minimum = 82
functions_minimum = 86
