[workspace]
resolver = "3"
members = [
  "ws_apps/example-rust",
  "ws_packages/d_test-guard",
]
# The APSS-composed CLI is generated into .apss/build by `apss install`;
# it must build standalone, not as a member of this workspace.
exclude = [
  ".apss/build",
]

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }

[workspace.metadata.coverage]
tool = "cargo-llvm-cov"
rust_surfaces = [
  "ws_apps/example-rust",
  "ws_packages/d_test-guard",
  "harness/doc-validator",
  "harness/versioning",
]
excluded_surfaces = [
  "harness/stack/rust-stub",
]
lines_minimum = 82
functions_minimum = 86
