# Self-contained workspace block so the slot builds standalone inside pnpm/turbo.
[workspace]

[package]
name = "harness-doc-validator"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Doc-validator slot plugin: checks Markdown links, APSS ADR shape, and manifest cross-references."
publish = false

[lib]
name = "harness_doc_validator"
path = "src/lib.rs"

[[bin]]
name = "harness-doc-validator"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "deny", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"

# HARNESS-ENGINEERING PROTECTED COVERAGE TARGETS / DO NOT ADJUST.
# Enforced by just cov-doc-validator. main.rs is excluded because it is a
# small CLI shell; all business logic lives in lib.rs.
[package.metadata.coverage]
tool = "cargo-llvm-cov"
ignore_filename_regex = "main\\.rs"
lines_minimum = 82
functions_minimum = 94
