# Self-contained workspace block so the slot builds standalone inside pnpm/turbo.
[workspace]

[package]
name = "harness-versioning"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Versioning slot orchestrator for conventional commits, changelog generation, release commits, and semver tags."
publish = false

[[bin]]
name = "harness-versioning"
path = "src/main.rs"

[lib]
name = "harness_versioning"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "deny", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"

# Dedicated profile for the `just cov-rust` lanes (scripts/lib/coverage.ts).
# llvm-cov mapping comes from -C instrument-coverage, not debuginfo, so
# line-tables-only keeps reports byte-identical while shedding the full
# debuginfo that balloons CARGO_TARGET_DIR. Incremental is off because
# coverage runs are one-shot. Keep aligned with the root Cargo.toml profile.
[profile.cov]
inherits = "dev"
debug = "line-tables-only"
incremental = false

[package.metadata.coverage]
tool = "cargo-llvm-cov"
ignore_filename_regex = "main\\.rs"
lines_minimum = 100
functions_minimum = 100
