[project]
name = "example-python"
version = "0.1.0"
description = "Minimal Python example wired to the telemetry-sdk slot (OTEL). Proves the harness's hello-world for Python apps in the polyglot-monorepo template."
requires-python = ">=3.11"
dependencies = [
  # Per docs/standard/decisions/telemetry-sdk.md: SDK 1.41+ for stable traces/logs/metrics.
  # opentelemetry-distro adds the `opentelemetry-instrument` zero-code CLI.
  "opentelemetry-api>=1.41,<2",
  "opentelemetry-sdk>=1.41,<2",
  "opentelemetry-exporter-otlp-proto-http>=1.41,<2",
  "opentelemetry-distro>=0.62b0",
]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-cov>=5"]

# Dev tools — declared here so `uv run --project <this-dir> <tool>` resolves
# them inside the project's own venv instead of falling through to a pyenv
# shim on the consumer's box. See E-06 / E-08 retrospective and
# experiments/2026-05-17--e06-e08-uv-run-prefix.
[dependency-groups]
dev = [
  "mypy>=1.13",
  "ruff>=0.8",
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
]

[project.scripts]
example-python = "example_python.main:cli"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/example_python"]

# ── HARNESS-ENGINEERING PROTECTED CONFIG ────────────────────────────────────
# DO NOT ADJUST THESE VALUES. They encode the testing-pyramid contract from
# `docs/standard/v0.1.md` for the telemetry-sdk slot's reference example.
#
# Coverage is enforced via `pytest --cov=example_python --cov-fail-under=100` in
# CI. If a line is hard to cover, refactor the production code (extract a pure
# helper, hoist i/o, return values instead of sys.exit()), do not lower the
# threshold. mypy strict-mode is enforced because typed APIs at the boundary
# catch a class of runtime errors unit tests can miss — see retro 015.
#
# PROTECTED: 100, not 90. Per user directive — 100% across the board.
# Integration tests live in tests/integration/ and are excluded from --cov
# scope (subprocess coverage isn't merged). Run `pytest tests/ --no-cov` for
# pure-integration runs.
# ───────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# Coverage applies to unit tests only; integration tests spawn subprocesses
# and would otherwise drag the merged number down artificially.
addopts = "--cov=example_python --cov-fail-under=100 --cov-report=term-missing --ignore=tests/integration"

[tool.coverage.run]
branch = true
source = ["src/example_python"]

[tool.coverage.report]
fail_under = 100     # PROTECTED — 100, not lower.
show_missing = true

[tool.mypy]
# PROTECTED — do not relax. `strict = true` enables a baseline strict set;
# the extras below catch the Anys and unreachable code that --strict misses.
# `ignore-without-code` parallels banning bare TS ignores: every
# `# type: ignore` MUST name a specific error code.
strict = true
disallow_any_explicit = true
warn_unreachable = true
strict_equality = true
enable_error_code = ["redundant-self", "truthy-bool", "ignore-without-code"]
python_version = "3.11"
packages = ["example_python"]
